# SafePyramid

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
configs/: models.yaml
examples/: custom_guard.py
site/: app.js  data.js  index.html  styles.css
src/safepyramid/: __init__.py  auth.py  cli.py  constants.py  data.py  per_rule.py  runner.py  scoring.py
src/safepyramid/models/: __init__.py  api_guard.py  base.py  generic_guard.py  vllm_engine.py
tests/: smoke_test.py
tests/fixtures/: mini_benchmark.json
